stylesheets/cover.css
/*
 * Globals
 */

/* Links */
a,
a:focus,
a:hover {
  color: #fff;
}

/* Custom default button */
.btn-secondary,
.btn-secondary:hover,
.btn-secondary:focus {
  color: #333;
  text-shadow: none; /* Prevent inheritance from `body` */
  background-color: #fff;
  border: .05rem solid #fff;
  margin: 30px;
}



/*
 * Base structure
 */

html,
body {
  height: 100%;
}

body {
  display: -ms-flexbox;
  display: -webkit-box;
  display: flex;
  -ms-flex-pack: center;
  -webkit-box-pack: center;
  justify-content: center;
  color: #fff;
  background-color: #333;
  text-shadow: 0 .05rem .1rem rgba(0, 0, 0, .5);
}

.cover-container {
  max-width: 50em;
}

.img-fluid{
  border-radius: 5%;
  margin-top: 40px;
  margin-bottom: 50px;
}

#profile-pic {
  width: 250px;
  height: 250px;
}

#canvas{
    z-index: -1;
    position: fixed;
}

#input-form {
  padding-top: 10px;
  font-weight: 700;
}


/*
 * Header
 */

.masthead {
  margin-bottom: 0rem;
}

.masthead-brand {
  margin-bottom: 0;
  float: left;
}

.nav-masthead {
  float: right;
}

.nav-masthead .nav-link {
  padding: .25rem 0;
  font-weight: 700;
  color: rgba(255, 255, 255, .5);
  background-color: transparent;
  border-bottom: .25rem solid transparent;
}

.nav-masthead .nav-link:hover,
.nav-masthead .nav-link:focus {
  border-bottom-color: rgba(255, 255, 255, .25);
}

.nav-masthead .nav-link + .nav-link {
  margin-left: 2rem;
}

.nav-masthead .active {
  color: #fff;
  border-bottom-color: #fff;
}

/* @media (min-width: 900px) {
  .masthead-brand {
    float: left;
  }
  .nav-masthead {
    float: right;
  } */
  

  /* @media (min-width: 400px) {
    .masthead-brand {
      float: left;
    }
    .nav-masthead {
      float: right;
    }
} */

@media screen and (max-width: 35rem) {
  .nav-masthead {
    float:none;
    display: block;
    text-align: center;
  }
  .nav-link {
    float: none;
    display: block;
    text-align: center;
  }
  .masthead-brand {
    float: none;
  }
  .nav-masthead .nav-link + .nav-link {
    margin-left: 0rem;
  }
  
}

@media screen and (max-width: 25rem){
  .nav-masthead {
    margin-bottom: 75px;
  }
}


/*
 * Cover
 */
.cover {
  padding: 0 1.5rem;
}
.cover .btn-lg {
  padding: .75rem 1.25rem;
  font-weight: 700;
}
.lead {
  max-width: 30em;
  font-size: x-large;
}


/*
 * Footer
 */
.mastfoot {
  color: rgba(255, 255, 255, .5);
}

